fixed the search block

--- a/app/index.html
+++ b/app/index.html
@@ -99,8 +99,7 @@
                             <input class="search__inner-block-input" type="search" for="search__inner-block-input"
                                 placeholder="Search your products" required name="product">
                             <div class="search__inner-block-box">
-                                <select class="search__inner-block-select" name="categories"
-                                    id="search__inner-block-input">
+                                <select class="search__inner-block-select" name="categories">
                                     <option value="All Categories">All Categories</option>
                                     <option value="WordPress">WordPress</option>
                                     <option value="PLugins">Plugins</option>
