--- a/app/index.html
+++ b/app/index.html
@@ -23,12 +23,18 @@
                     </a>
                     <div class="header__top-box">
                         <a class="header__top-link" href="">Become a Seller</a>
-                        <a class="header__top-link-notifications" href="#"><span
-                                class="lnr lnr-alarm header__top-notifications header-icons"></span></a>
-                        <a class="header__top-link-messages" href="#"><span
-                                class="lnr lnr-envelope header__top-messages header-icons"></span></a>
-                        <a class="header__top-link-basket" href="#"><span
-                                class="lnr lnr-cart header__top-basket header-icons"></span></a>
+                        <a class="header__top-link-notifications" href="#">
+                            <span class="lnr lnr-alarm header__top-notifications header-icons"></span>
+                        </a>
+                        
+                        <a class="header__top-link-messages" href="#">
+                            <span class="lnr lnr-envelope header__top-messages header-icons"></span>
+                        </a>
+
+                        <a class="header__top-link-basket" href="#">
+                            <span class="lnr lnr-cart header__top-basket header-icons"></span>
+                        </a>
+
                         <div class="header__top-user">
                             <a class="header__top-user-link" href="#">
                                 <img class="header__top-user-photo" src="images/user.png" alt="avatar">
@@ -39,6 +45,7 @@
                                 </div>
                             </a>
                         </div>
+
                     </div>
                 </div>
             </div>
