fixed some html code

--- a/app/index.html
+++ b/app/index.html
@@ -331,14 +331,14 @@
 
                                 <div class="featured-product__rating">
                                     <div class="featured-product__rating-price" href="#">$10 - $50</div>
-                                    <a class="featured-product__rating-like" href="#">
+                                    <button class="featured-product__rating-like" href="#">
                                         <span class="lnr lnr-heart featured-product__like-icon"></span>
                                         46
-                                    </a>
-                                    <a class="featured-product__rating-sell" href="#">
+                                    </button>
+                                    <button class="featured-product__rating-sell" href="#">
                                         <span class="lnr lnr-cart featured-product__rating-basket"></span>
                                         634
-                                    </a>
+                                    </button>
                                     <div class="rate-star featured-product__rating-star"></div>
                                 </div>
                             </div>
