--- a/app/index.html
+++ b/app/index.html
@@ -97,8 +97,7 @@
 
                     <div class="header__bottom-search">
                         <form>
-                            <label class="header__bottom-label visually-hidden" for="header__bottom-label"
-                                name="header__label"></label>
+                            <label class="header__bottom-label visually-hidden" for="header__bottom-label"></label>
                             <input id="header__bottom-label" class="header__bottom-search-input" type="search"
                                 placeholder="Search product here..." required name="product">
                             <button class="header__bottom-btn" type="submit">
@@ -270,12 +269,12 @@
                                 </div>
 
                                 <div class="product-cart__rating">
-                                    <div class="product-cart__rating-price" href="#">$10 - $50</div>
-                                    <button class="product-cart__rating-like" href="#">
+                                    <div class="product-cart__rating-price">$10 - $50</div>
+                                    <button class="product-cart__rating-like">
                                         <span class="lnr lnr-heart product-cart__like-icon"></span>
                                         46
                                     </button>
-                                    <button class="product-cart__rating-sell" href="#">
+                                    <button class="product-cart__rating-sell">
                                         <span class="lnr lnr-cart product-cart__rating-basket"></span>
                                         634
                                     </button>
@@ -329,12 +328,12 @@
                                 </div>
 
                                 <div class="product-cart__rating">
-                                    <div class="product-cart__rating-price" href="#">$10 - $50</div>
-                                    <button class="product-cart__rating-like" href="#">
+                                    <div class="product-cart__rating-price">$10 - $50</div>
+                                    <button class="product-cart__rating-like">
                                         <span class="lnr lnr-heart product-cart__like-icon"></span>
                                         46
                                     </button>
-                                    <button class="product-cart__rating-sell" href="#">
+                                    <button class="product-cart__rating-sell">
                                         <span class="lnr lnr-cart product-cart__rating-basket"></span>
                                         634
                                     </button>
@@ -466,14 +465,14 @@
                                 </div>
 
                                 <div class="category-cart__sell">
-                                    <div class="category-cart__sell-price" href="#">$20</div>
-                                    <button class="category-cart__sell-like" href="#">
+                                    <div class="category-cart__sell-price">$20</div>
+                                    <button class="category-cart__sell-like">
                                         <span class="lnr lnr-heart category-cart__like-icon"></span>
-                                        <div class="category-cart__sell-number">
+                                        <span class="category-cart__sell-number">
                                             90
-                                        </div>
+                                        </span>
                                     </button>
-                                    <button class="category-cart__sell-basket" href="#">
+                                    <button class="category-cart__sell-basket">
                                         <span class="lnr lnr-cart category-cart__basket-icon"></span>
                                         246
                                     </button>
@@ -526,14 +525,14 @@
                                 </div>
 
                                 <div class="category-cart__sell">
-                                    <div class="category-cart__sell-price" href="#">$18</div>
-                                    <button class="category-cart__sell-like" href="#">
+                                    <div class="category-cart__sell-price">$18</div>
+                                    <button class="category-cart__sell-like">
                                         <span class="lnr lnr-heart category-cart__like-icon"></span>
-                                        <div class="category-cart__sell-number">
+                                        <span class="category-cart__sell-number">
                                             48
-                                        </div>
+                                        </span>
                                     </button>
-                                    <button class="category-cart__sell-basket" href="#">
+                                    <button class="category-cart__sell-basket">
                                         <span class="lnr lnr-cart category-cart__basket-icon"></span>
                                         50
                                     </button>
@@ -586,15 +585,15 @@
                                 </div>
 
                                 <div class="category-cart__sell">
-                                    <div class="category-cart__sell-price" href="#">$10</div>
-                                    <button class="category-cart__sell-like category-cart__sell-star" href="#">
+                                    <div class="category-cart__sell-price">$10</div>
+                                    <button class="category-cart__sell-like category-cart__sell-star">
                                         <span class="lnr lnr-heart category-cart__like-icon"></span>
-                                        <div class="category-cart__sell-number">
+                                        <span class="category-cart__sell-number">
                                             56
-                                        </div>
+                                        </span>
                                     </button>
                                     <div class="rate-star"></div>
-                                    <button class="category-cart__sell-basket" href="#">
+                                    <button class="category-cart__sell-basket">
                                         <span class="lnr lnr-cart category-cart__basket-icon"></span>
                                         68
                                     </button>
@@ -647,14 +646,14 @@
                                 </div>
 
                                 <div class="category-cart__sell">
-                                    <div class="category-cart__sell-price" href="#">$20</div>
-                                    <button class="category-cart__sell-like" href="#">
+                                    <div class="category-cart__sell-price">$20</div>
+                                    <button class="category-cart__sell-like">
                                         <span class="lnr lnr-heart category-cart__like-icon"></span>
-                                        <div class="category-cart__sell-number">
+                                        <span class="category-cart__sell-number">
                                             90
-                                        </div>
+                                        </span>
                                     </button>
-                                    <button class="category-cart__sell-basket" href="#">
+                                    <button class="category-cart__sell-basket">
                                         <span class="lnr lnr-cart category-cart__basket-icon"></span>
                                         246
                                     </button>
@@ -707,14 +706,14 @@
                                 </div>
 
                                 <div class="category-cart__sell">
-                                    <div class="category-cart__sell-price" href="#">$18</div>
-                                    <button class="category-cart__sell-like" href="#">
+                                    <div class="category-cart__sell-price">$18</div>
+                                    <button class="category-cart__sell-like">
                                         <span class="lnr lnr-heart category-cart__like-icon"></span>
-                                        <div class="category-cart__sell-number">
+                                        <span class="category-cart__sell-number">
                                             48
-                                        </div>
+                                        </span>
                                     </button>
-                                    <button class="category-cart__sell-basket" href="#">
+                                    <button class="category-cart__sell-basket">
                                         <span class="lnr lnr-cart category-cart__basket-icon"></span>
                                         50
                                     </button>
@@ -767,15 +766,15 @@
                                 </div>
 
                                 <div class="category-cart__sell">
-                                    <div class="category-cart__sell-price" href="#">$10</div>
-                                    <button class="category-cart__sell-like category-cart__sell-star" href="#">
+                                    <div class="category-cart__sell-price">$10</div>
+                                    <button class="category-cart__sell-like category-cart__sell-star">
                                         <span class="lnr lnr-heart category-cart__like-icon"></span>
-                                        <div class="category-cart__sell-number">
+                                        <span class="category-cart__sell-number">
                                             56
-                                        </div>
+                                        </span>
                                     </button>
                                     <div class="rate-star"></div>
-                                    <button class="category-cart__sell-basket" href="#">
+                                    <button class="category-cart__sell-basket">
                                         <span class="lnr lnr-cart category-cart__basket-icon"></span>
                                         68
                                     </button>
