--- a/app/index.html
+++ b/app/index.html
@@ -1767,7 +1767,7 @@
 
                     <div class="footer__search">
                         <form>
-                            <label class="visually-hidden" for="footer__label-search" name="footer__label"></label>
+                            <label class="visually-hidden" for="footer__label-search"></label>
                             <input class="footer__search-input" id="footer__label-search" type="email"
                                 placeholder="Enter email" required>
                             <button class="footer__search-btn" type="submit">Submit</button>
